# ai-meeting-notes-jira-automation

./: README.md  main.py  pyproject.toml
backend/: .env_copy  README.md  requirements.txt  testcommands.txt
backend/app/: db.py  main.py  models.py  router.py  routes.py  sqs_client.py  websocket_manager.py
backend/app/routes/: internal.py  websocket.py
backend/worker/: notifier.py  processor.py  worker.py
backend/worker/jira/: jira_client.py
backend/worker/llm/: openai_client.py
backend/worker/transcript/: whisper_transcriber.py  youtube.py  zoom.py
frontend/: README.md  api.py  app.py
